--- a/app/views/tales/_form.haml
+++ b/app/views/tales/_form.haml
@@ -5,8 +5,12 @@
   = f.label "Where it is set, roughly (the town or city)"
   = f.text_field :where
 %div
+  = f.label "A URL to a video, photo, or audio file that summarises this tale"
+  = f.text_field :embed_url
+%div
   = f.label "Describe what happens in the story - why should someone experience it?"
   ~ f.text_area :description
+
 %div
   = f.label "What should the player do to start the game? Go to a particular place perhaps?"
   ~ f.text_area :start_the_game
