--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -22,8 +22,8 @@
     = favicon_tag '/favicon.ico'
     %script{:src=>"/assets/modernizr.js",:type=>"text/javascript"}
   
-    <script type="text/javascript" src="http://use.typekit.com/lvq0vmh.js"></script>
-    <script type="text/javascript">try{Typekit.load();}catch(e){}</script> 
+    <script type="text/javascript" src="http://use.typekit.com/pkt6axk.js"></script>  
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
@@ -56,7 +56,7 @@
               %i.icon-twitter-sign
               %span
                 Twitter
-        %header#header{:class=>("large" if request.path == "/")}          
+        %header#header{:class=>("large" if @home)}          
           %h1#logo
             %a{:title=>"Tales you Win", :href=>"/"} Tales you Win
           %h2
