--- a/app/views/steps/_form.haml
+++ b/app/views/steps/_form.haml
@@ -12,7 +12,7 @@
     A URL to a photo, video, audio clip hosted on another service (Flickr, Soundcloud, Youtube etc.), not a link to a file.
 
 %div
-  = f.label :password
+  = f.label "An optional password"
   = f.text_field :password
   %br
   %small
