--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -31,9 +31,8 @@
     - if Padrino.env == :production  
       :javascript
         var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-32493853-1']);
-        _gaq.push(['_setDomainName', 'sketchingwithcode.com']);
-        _gaq.push(['_setAllowLinker', true]);
+        _gaq.push(['_setAccount', 'UA-32703744-1']);
+        _gaq.push(['_setDomainName', 'talesyouwin.com']);
         _gaq.push(['_trackPageview']);
 
         (function() {
