--- a/app/views/tales/index.haml
+++ b/app/views/tales/index.haml
@@ -1,4 +1,16 @@
+#overview
+  .column
+    .icon
+    %h2 1. Go to a location
+  .column
+    .icon 
+    %h2 2. Open the app
+  .column
+    .icon 
+    %h2 3. Play a tale
+    
 %section
+
   %h1
     Tales you can play
 
