--- a/app/views/tales/index.haml
+++ b/app/views/tales/index.haml
@@ -8,8 +8,8 @@
   .column
     .icon 
     %h2 3. Play a tale
-    
-%section
+
+%section#tales_you_can_play
 
   %h1
     Tales you can play
@@ -20,7 +20,7 @@
       in
       = tale.where
 
-%section
+%section#for_artists
   %h1
     For artists
 
