--- a/app/views/tales/index.haml
+++ b/app/views/tales/index.haml
@@ -1,7 +1,7 @@
 #overview
   .column
     .icon
-    %h2 1. Go to a location
+    %h2 1. Walk to a location
   .column
     .icon 
     %h2 2. Open the app
